# hqlite

./: README.md  flake.nix  hqlite.cabal
app/: Main.hs
app/Parser/: Sql.hs
app/Repl/: Runner.hs
